add modifications for work with plugin "delayed-message-exchange"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   rabbitmq:
-    image: "rabbitmq:management"  # используем образ с включенным управлением
+    image: "heidiks/rabbitmq-delayed-message-exchange:latest"
     hostname: rabbitmqhost
     restart: always
     ports:
